--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.11.14",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
     "password-validator": "^5.1.1",
     "secure-random-string": "^1.1.3",
