--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
     "password-validator": "^5.1.1",
+    "path": "^0.12.7",
     "secure-random-string": "^1.1.3",
     "uuid": "^8.3.2"
   }
