--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.7",
     "password-validator": "^5.1.1",
     "path": "^0.12.7",
+    "ro-encrypt": "^1.0.1",
     "secure-random-string": "^1.1.3",
     "uuid": "^8.3.2"
   }
