--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "votify-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Voting app for people to collaborate on something",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -21,7 +21,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mongoose": "^5.11.15",
+    "mongoose": "^5.11.18",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
     "password-validator": "^5.1.1",
